# pipen

./: .codacy.yaml  .codacy.yml  .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .tagitrc  .travis.yml  404.html  AGENTS.md  CONTRIBUTING.md  DOC.md  Makefile  README.md  README.rst  SUMMARY.md  api.py  api2.py  bioprocs.py  book.json  channels.md  index.html  mkdocs.yml  placeholders.md  pylintrc  pyppl-cli  pyppl.py  pyproject.toml  requirements.txt  script.js  search.html  setup.py  style.css  test.py  tox.ini
.github/workflows/: build.yml  docs.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
api/pipen/: index.html
api/pipen.channel/: index.html
api/pipen.cli/: index.html
api/pipen.cli.help/: index.html
api/pipen.cli.plugins/: index.html
api/pipen.cli.profile/: index.html
api/pipen.cli.version/: index.html
api/pipen.defaults/: index.html
api/pipen.exceptions/: index.html
api/pipen.job/: index.html
api/pipen.pipen/: index.html
api/pipen.pluginmgr/: index.html
api/pipen.proc/: index.html
api/pipen.procgroup/: index.html
api/pipen.progressbar/: index.html
api/pipen.scheduler/: index.html
api/pipen.template/: index.html
api/pipen.utils/: index.html
api/pipen.version/: index.html
architecture/: index.html
basics/: index.html
caching/: index.html
channels/: index.html
cli/: index.html
cloud/: index.html
configurations/: index.html
css/: theme_extra.css
defining-proc/: index.html
docs/: CHANGELOG.md  DOCS.md  SUMMARY.md  aggregations.md  api.md  architecture.md  basic-concepts-and-directory-structure.md  basics.md  caching.md  change-log.md  channels.md  cli.md  cloud.md  command-line-argument-parser.md  command-line-tool.md  configuration.md  configurations.md  configure-a-pipeline.md  configure-your-logs.md  defining-proc.md  defining.md  draw-flowchart-of-a-pipeline.md  error-handling.md  error.md  examples.md  export-output-files.md  export.md  faq.md  flowchart.md  glossary.md  input-output.md  logs.md  placeholders.md  plugin.md  proc-group.md  procsets.md  requirements.txt  runners.md  running.md  scheduler.md  (+8 more)
docs/tutorials/: beginner.md
error/: index.html
example/: example.py
examples/: caching.py  cloudwdir.py  container.py  example.py  gbatch.py  index.html  input_data_callback.py  mako-templating.py  multijobs.py  plugin-example.py  python-script.py  retry.py
examples/100jobs/: 100jobs.py
examples/checkDone/: checkdone.py
examples/debugScript/: debugScript.py
examples/demo/: TCGAprocs.py  demo.py
examples/differentLang/: differentLang.py
examples/differentRunner/: differentRunner.py
examples/drawFlowchart/: drawFlowchart.py
examples/getStarted/: getStarted.py
examples/inputFromDependent/: inputFromDependent.py
examples/resume/: resume.py
examples/retry/: retry.py
examples/switchRunnerProfile/: PyPPL.toml  profiles.json  switchRunnerProfile.py
examples/transformInputChannels/: transformInputChannels.py
examples/useArgs/: usingArgs.py
examples/useJinja2/: useJinja2.py
examples/useParams/: useParams.py
glossary/: index.html
helpers/: channel.py  proc.py  strtpl.py
input-output/: index.html
js/: theme.js  theme_extra.js  version-select.js
pipen/: __init__.py  __main__.py  _job_caching.py  _proc_properties.py  channel.py  cli.py  defaults.py  exceptions.py  job.py  pipen.py  plugin.py  pluginmgr.py  proc.py  procgroup.py  progressbar.py  scheduler.py  template.py  utils.py  version.py
pipen/channel/: __init__.py  vector.py  verbs.py
pipen/cli/: __init__.py  _hooks.py  _main.py  help.py  plugins.py  profile.py  version.py
plugin/: index.html
proc-group/: index.html
pyppl/: __init__.py  _fsutil.py  _job.py  _proc.py  aggr.py  channel.py  config.py  console.py  exception.py  exceptions.py  flowchart.py  job.py  job0.py  job2.py  jobmgr.py  jobmgr0.py  jobmgr2.py  logger.py  logger2.py  parameters.py  parameters2.py  plugin.py  proc.py  procset.py  proctree.py  pyppl.py  report.py  runner.py  runners.py  runners2.py  template.py  utils.py
pyppl/console/: __init__.py  clean.py  list.py  logo.py  plugins.py  profile.py  status.py
pyppl/helpers/: __init__.py  aggr.py  channel.py  doct.py  job.py  logger.py  parameters.py  proc.py  strtpl.py  utils.py
pyppl/runners/: __init__.py  helpers.py  runner.py  runner_dry.py  runner_local.py  runner_queue.py  runner_sge.py  runner_slurm.py  runner_ssh.py
pyppl/templates/: __init__.py  template.py  template_jinja2.py  template_pyppl.py
pyppl/utils/: __init__.py  box.py  cmd.py  parallel.py  ps.py  safefs.py  taskmgr.py  threadpool.py
runners/: runner_local.py  runner_sge.py  runner_ssh.py
running/: index.html
scheduler/: index.html
script/: index.html
search/: search_index.json
templating/: index.html
test/: channel.unittest.py  proc.unittest.py  pyppl.unittest.py  runner.unittest.py  strtpl.unittest.py
tests/: .coveragerc  __init__.py  aggr.unittest.py  channel.unittest.py  conftest.py  doct.unittest.py  fixt_channel.py  fixt_flowchart.py  fixt_job.py  fixt_jobmgr.py  fixt_procset.py  fixt_utils.py  helpers.py  job.unittest.py  logger.unittest.py  params.unittest.py  path.py  proc.unittest.py  pyppl  pyppl-test.py  pyppl.unittest.py  pyppl_empty.py  runner.unittest.py  strtpl.unittest.py  test.py  testAggr.py  testChannel.py  testException.py  testExceptions.py  testFlowchart.py  testJob.py  testJobmgr.py  testLogger.py  testParameters.py  testProc.py  testProcTree.py  testPyPPL.py  testRunners.py  testTemplates.py  testUtils.py  (+23 more)
tests/first/: test.py  test1.txt  test2.py  test3.txt
tests/mocks/: qdel  qstat  qsub  qsub_done  sbatch  sbatch_done  scancel  squeue  srun  ssh
troubleshooting/: index.html
tutorials/: test.py  test2.py
tutorials/beginner/: index.html
tutorials/debugScript/: debugScript.py
tutorials/differentLang/: differentLang.py
tutorials/differentRunner/: differentRunner.py
tutorials/drawFlowchart/: drawFlowchart.py
tutorials/firstScript/: firstScript.py
tutorials/getStarted/: getStarted.py
(+37 files in other folders)
