[build-system]
requires = [ "poetry>=1.1.0" ]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pipen"
version = "0.15.4"
description = "A pipeline framework for python"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pipen"
repository = "https://github.com/pwwang/pipen"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"
liquidpy = "^0.8.2"
pandas = "^2.0"
enlighten = "^1"
argx = "^0.2.10"
xqute = "^0.5.1"
## included in xqute
# rich = "^13"
# diot = "^0.1"
# simplug = "^0.0"
rtoml = "^0.8"
# May not be rtoml
python-simpleconf = {version = "^0.6", extras = ["toml"]}
pipda = "^0.13"
varname = "^0.13"

[tool.poetry.dev-dependencies]
openpyxl = "^3"
pytest = "^8"
pytest-asyncio = "^0.23"
pytest-cov = "^5"
pytest-xdist = "^3"
pytest-forked = "^1.6"
# This also installs scipy and wcwidth
datar = { version = "^0.15", extras = ["pandas"] }

[tool.poetry.scripts]
pipen = "pipen.cli:main"

[tool.pytest.ini_options]
addopts = "-vv -n auto --dist loadgroup -p no:benchmark -W error::UserWarning --cov-config=.coveragerc --cov=pipen --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
filterwarnings = [
   "ignore:.+may lead to deadlocks in the child:DeprecationWarning",
]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
