[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipen"
dynamic = ["version"]
description = "A pipeline framework for python"
authors = [
    {name = "pwwang", email = "pwwang@pwwang.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "liquidpy>=0.8,<1",
    "pandas>=2.0,<4",
    "enlighten>=1,<2",
    "argx>=0.4,<0.5",
    "xqute>=2.0,<3",
    ## included in xqute
    # "rich>=13,<14",
    # "diot>=0.1,<0.2",
    # "simplug>=0.0,<0.1",
    "python-simpleconf[toml]>=0.9,<1",
    "pipda>=0.13,<1",
    "varname>=1.0",
]

[project.urls]
Homepage = "https://github.com/pwwang/pipen"
Repository = "https://github.com/pwwang/pipen"

[project.scripts]
pipen = "pipen.cli:main"

[tool.hatch.version]
path = "pipen/version.py"

[dependency-groups]
dev = [
    "openpyxl>=3,<4",
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<0.26",
    "pytest-cov>=6,<7",
    "pytest-xdist>=3,<4",
    "pytest-forked>=1.6,<2",
    # This also installs scipy and wcwidth
    "datar[pandas]>=0",
    "flake8>=7,<8",
    "python-dotenv>=1,<2",
    "cloudsh[gs]>=0.3,<0.4",
    # dependencies for pipelines in ./examples
    "ipykernel>=6.29.5,<7",
]
example = [
    "mako>=1.3,<2",
    "python-dotenv>=1,<2",
    "pipen-verbose>=1.1,<2",
    "cloudsh[gs]>=0.3,<0.4",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "jinja2>=3.1.5,<4",
    "mkdocs-material>=9.6.5,<10",
    "pymdown-extensions>=10.14.3,<11",
    "mkapi-fix>=0.1.1,<0.2",
    "mkdocs-rtd>=0.0.15",
]

[tool.pytest.ini_options]
addopts = "-vv -n auto --dist loadgroup -p no:benchmark -W error::UserWarning --cov-config=.coveragerc --cov=pipen --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
filterwarnings = [
   "ignore:.+may lead to deadlocks in the child:DeprecationWarning",
]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef"]
show_error_codes = true
strict_optional = false

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
